- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    gmsh.desktop -> 1.3

--- a/gmsh.desktop
+++ b/gmsh.desktop
@@ -1,9 +1,8 @@
 [Desktop Entry]
-Encoding=UTF-8
 Name=gmsh
 Comment=A 3D mesh generator
 Comment[pl]=Generator siatki 3D
-Icon=gmsh.png
+Icon=gmsh
 Exec=gmsh
 Terminal=false
 Type=Application
